circt-bc260128-00000bec/error.log
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
    %0 = sim.fmt.literal "Error: Assertion failed: a != 0"
         ^
<stdin>:3:10: note: see current operation: %8 = "sim.fmt.literal"() <{literal = "Error: Assertion failed: a != 0"}> : () -> !sim.fstring
